modified:   src/Array/ArrayMedium.java 	modified:   src/Common/BackTracking.java 	modified:   src/Common/Utils.java